legacy/1.0/kubernetes/applications/mealie/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie
  namespace: apps
spec:
  selector:
    matchLabels:
      app: mealie
  serviceName: "mealie"
  replicas: 1
  template:
    metadata:
      labels:
        app: mealie
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: mealie
          image: hkotel/mealie:v3.0.0
          resources:
            requests:
              memory: 2Gi
              cpu: 1000m
              ephemeral-storage: 8Gi
            limits:
              memory: 8Gi
              cpu: 2000m
              ephemeral-storage: 8Gi
          ports:
            - containerPort: 9000
              name: web
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
            - name: mealie-nltk
              mountPath: /nltk_data/
      volumes:
        - name: mealie-nltk
          persistentVolumeClaim:
            claimName: mealie-nltk
  volumeClaimTemplates:
    - metadata:
        name: mealie-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 8Gi
