legacy/1.0/kubernetes/applications/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-svc
  namespace: apps
  labels:
    app: mealie
spec:
  ports:
    - port: 9000
      name: web
  selector:
    app: mealie
